# deepfake-ecg

./: pyproject.toml
deepfakeecg/: __init__.py  deepfakeecg.py
examples/: generate_as_numpy.py  generate_to_file.py  generator-tool  simple.py
