[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfake-ecg"
version = "1.2.0"
description = "Configurable Deep Fake ECG generator."
readme = "README.md"
authors = [
    { name = "Vajira Thambawita", email = "vlbthambawita@gmail.com" },
    { name = "Thomas Dreibholz", email = "dreibh@simula.no" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "pandas",
    "torch"
]

[project.optional-dependencies]
examples = ["matplotlib"]

[tool.setuptools.packages.find]
include = ["deepfakeecg", "deepfakeecg.*"]

[tool.setuptools.package-data]
deepfakeecg = ["checkpoints/g_stat.pt"]
